nginx/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: websvr
  #namespace: ingress-nginx
spec: 
  replicas: 3
  selector: 
    matchLabels: 
      app: websvr
  template: 
    metadata: 
      labels: 
        app: websvr
    spec: 
      containers:
      - name: websvr-containers
        image: nginx:latest
        imagePullPolicy: Never
        ports: 
        - name: http
          containerPort: 80

---
apiVersion: v1
kind: Service
metadata: 
  name: websvc
  namespace: default 
spec: 
  selector: 
    app: websvr
  ports: 
  - name: http
    targetPort: 80
    port: 80
