nginx/ing-discovery.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ing-discovery
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/app-root: /
    nginx.ingress.kubernetes.io/configuration-snippet: |
      #if ($host = 'a.jet.com') { rewrite ^  http://www.qq.com redirect;}
      #rewrite (?i)/d/(.*) /$1 break;
      #rewrite /d/(.*) http://www.baidu.com redirec
      #rewritelog on      
      #ok if ($request_uri ~* '^/eureka/css/.*.css') { rewrite "(!?)/eureka/css/(.*)$" https://$host:32443/d/eureka/css/$2 last; }
      #ok if ($request_uri ~* '^/eureka/js/.*.js') { rewrite "(!?)/eureka/js/(.*)$" https://$host:32443/d/eureka/js/$2 last; }
      #if ($request_uri ~* '^/eureka/.*') { rewrite "(!?)/(.*)$" https://$host:32443/d/$2 last; }
      if ($request_uri ~* '^/eureka/.*\.(css|js)$') { rewrite "(!?)/(.*)$" https://$host:32443/discovery/$2 break; }
      rewrite "(!?)/favicon.ico" https://a.jet.com:32443/d/favicon.ico last;
      #rewrite https://a.jet.com:32443/eureka/css/wro.css https://a.jet.com:32443/d/eureka/css/wro.css redirect;
      #doesn't work rewrite ^/eureka/(.*)$ /discovery/eureka/$1 redirect;
      #doesn't work rewrite ^/eureka/css/(.*)$ /discovery/eureka/css/$1 redirect;
      #if ($uri = '/eureka/css/wro.css') { rewrite /eureka/css/wro.css  /d/eureka/css/wro.css redirect; }
      #if ($request_uri = '/eureka/css/wro.css') { rewrite ^  http://www.qq.com  redirect; }
      #rewrite "(?i)/d(/|$)(.*)" /$2 break;
spec:
  rules:
  - host: a.jet.com
    http:
      paths:
      - path: /discovery(/|$)(.*)
        backend:
          serviceName: discovery
          servicePort: 8761
      - path: /eureka(/|$)(.*)
        backend: 
          serviceName: discovery
          servicePort: 8761
